--- a/Tiler.csproj
+++ b/Tiler.csproj
@@ -5,11 +5,28 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PublishAot>true</PublishAot>
+    <StripSymbols>true</StripSymbols>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Tmds.DBus" Version="0.14.0" />
+    <PackageReference Include="Tmds.DBus.SourceGenerator" Version="0.0.7">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+    <Copy SourceFiles="Dbus/Windows.xml" DestinationFolder="$(OutDir)" />
+  </Target>
+  <Target Name="CopyCustomContentOnPublish" AfterTargets="Publish">
+    <Copy SourceFiles="Dbus/Windows.xml" DestinationFolder="$(PublishDir)" />
+  </Target>
+
+  <ItemGroup>
+    <AdditionalFiles Include="Dbus/Windows.xml" DBusGeneratorMode="Handler" />
   </ItemGroup>
 
 </Project>
